--- a/Testing/src/app/app.html
+++ b/Testing/src/app/app.html
@@ -232,6 +232,9 @@
       </svg>
       <h1>Hello, {{ title() }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
+      <button [disabled]="! isValidUser()">Save button</button>
+      <button (click)="cancelSubscription()">cancel Subscription</button>
+
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
