@switch is used

--- a/Testing/src/app/app.html
+++ b/Testing/src/app/app.html
@@ -244,13 +244,21 @@
 
       <h3>User profile using for Loop.</h3>
       <ul class="user-badge-list">
-        @for(badge of badges(); track $index;let idx= $index, e =$even){
-          <li class="user-badge">#{{idx}} : {{1}}</li>
+        @for(badge of badges(); track badge.id;let idx= $index, e =$even){
+          <li class="user-badge">#{{idx}} : {{badge.name}}</li>
         }@empty {
           <p>There is not list available</p>
         }
       </ul>
 
+      @switch (userPermission) {
+        @case('Admin'){
+          <p> Switch case executed.!</p>
+        }
+        @default {
+          <p>No user permission matched in switch loop.</p>
+        }
+      }
     </div> 
   </div>
 </main>
