another service inject for multiplication

--- a/Testing/src/app/receipt/receipt.html
+++ b/Testing/src/app/receipt/receipt.html
@@ -1,2 +1,3 @@
 <p>receipt works!</p>
-<h1>The total is {{ totalCost }}</h1>
+<h3>The total is {{ totalCost }}</h3>
+<h3>The total is {{ totalMul }}</h3>
