Setup routing for list/add/edit pages

--- a/Employee-Management-UI/src/app/app.html
+++ b/Employee-Management-UI/src/app/app.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 
 <div style="min-height: 80vh; padding: 20px;">
+  <router-outlet></router-outlet>
   <employee-list></employee-list>
 </div>
 
