--- a/Employee-Management-UI/src/app/components/header/header.html
+++ b/Employee-Management-UI/src/app/components/header/header.html
@@ -1,3 +1,5 @@
 <nav class="navbar navbar-dark bg-dark px-3">
   <a class="navbar-brand" href="#">Employee Management</a>
+  <a href="/employees">Employee List</a>
+  <a href="/employees/add">Add Employee</a>
 </nav>
